--- a/package.json
+++ b/package.json
@@ -1,21 +1,32 @@
 {
   "name": "s3-react",
-  "version": "1.2.4",
+  "version": "1.0.3",
   "description": "A React library for AWS S3 image upload",
   "author": {
-    "name": "Miriam Medo"
+    "name": "Miriam"
   },
-  "main": "index.js",
+  "type": "module",
+  "main": "lib/index.js",
+  "imports": {
+    "#*": [
+      "./src/*",
+      "./src/*.ts"
+    ]
+  },
+  "exports": {
+    ".": {
+      "types": "./lib/index.d.ts",
+      "default": "./lib/index.js"
+    }
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src --out-dir lib",
+    "build": "tsc",
     "clean": "rm -rf lib",
     "prepublish": "npm run clean && npm run build"
   },
   "files": [
-    "lib",
-    "src",
-    "index.js"
+    "lib"
   ],
   "keywords": [
     "react",
@@ -24,26 +35,25 @@
     "aws",
     "s3",
     "image",
-    "upload"
+    "upload",
+    "storage",
+    "s3-react",
+    "aws-s3"
   ],
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "crypto-js": "^3.1.9-1",
+    "crypto-js": "^4.2.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.0",
-    "babel-jest": "^19.0.0",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-stage-3": "^6.22.0",
-    "json-loader": "^0.5.7",
-    "webpack": "^3.8.1"
+    "@types/crypto-js": "^4.2.2",
+    "@types/node": "^20.11.21"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/miriam-samuels/s3-react"
   },
   "bugs": {
-    "url": "https://github.com/Fausto95/s3-react/issues"
+    "url": "https://github.com/miriam-samuels/s3-react/issues"
   }
 }
